Stylesheet/emote/tag updates 2012-10-14

--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -156,7 +156,7 @@ display: none !important;
 
 /* Sidebar Filly */
 
-.side a[href="http://fav.me/d5d0cv2"]{
+.side a[href="http://fav.me/d56f1ze"]{
    display: block;
    height: 120px;
    width: 120px;
