--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -249,7 +249,7 @@ a[href|="/notthebees"] {
     }
 
 /************MLP-LRG*************/
-a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"] {
+a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"] {
     display: block;
     clear: none;
     float: left;
@@ -315,6 +315,10 @@ a[href|="/mangohug"] {
 a[href|="/petra"] {
     background-position: -1447px -0px;
     width: 114px
+    }
+a[href|="/acer"] {
+    background-position: -1561px -0px;
+    width: 196px
     }
 
 /***********MLP-XLRG*************/
