--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -351,6 +351,23 @@ a.author[href$="/RetardVomitPussyCunt"]:after {
     background-image: url(%%down%%) !important;
     background-position: 0 0 !important
     }
+.arrow.down:hover:before {
+    position: absolute;
+    display: block;
+    z-index: 1000;
+    width: 85px;
+    content: "But, I wub you"; 
+    padding: 5px;
+    border: 0px solid #333;
+    text-align: center;
+    font-size: 10px;
+    color: white;
+    background: #1e63d8;
+    font-weight: bold;
+    margin-left: 25px;
+    margin-top: 5px;
+    }
+
 
 /* I: FOOTER*/
 
