--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -247,14 +247,7 @@ a[href|="/greatyamsoffire"]
     height: 217px;
     width: 325px;
 }
-a[href^="/t18"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 364px;
-    height: 500px;
-    background-image: url(%%tacoman%%) !important
-    }
+
 a[href|="/suckitave"]
 {
 
@@ -277,6 +270,16 @@ a[href|="/floutsy"]
     width: 277px;
 }
 
+a[href|="/sage"]
+{
+
+ background-image: url(%%sage%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    height: 224px;
+    width: 191px;
+}
 
 a[href|="/hitmonmatt"]
 {
