Stylesheet/emote/tag updates 2012-10-16

--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -1,3 +1,9 @@
+/* FlutterLounge CSS. For best pony's best lounge. 
+Rule 1. Copy everything.
+Rule 2. No plagiarism.
+Rule 3. No plagiarismm.
+Rule 4. Make lots of emotes. */
+
 /* Fluttermotes because why not.*/
 
 a[href|="/fs00"], a[href|="/fs10"], a[href|="/fs20"], a[href|="/fs01"], a[href|="/fs11"], a[href|="/fs21"], a[href|="/fs02"], a[href|="/fs12"], a[href|="/fs22"], a[href|="/fs03"], a[href|="/fs13"], a[href|="/fs23"], a[href|="/fs04"], a[href|="/fs14"], a[href|="/fs24"], a[href|="/fs05"], a[href|="/fs15"], a[href|="/fs25"], a[href|="/fs06"], a[href|="/fs16"], a[href|="/fs26"] {
@@ -37,6 +43,8 @@ a[href|="/fluttershythis"], a[href|="/shythis"], a[href|="/flutterthis"] {
     height: 500px;
     background-image: url(%%this%%)
     }
+
+/* Flair! So many wonderful choices! */
 
 .flair {
     padding: 0;
@@ -86,6 +94,18 @@ a[href|="/fluttershythis"], a[href|="/shythis"], a[href|="/flutterthis"] {
     display: inline-block;
     height: 200px;
     width: 200px;
+}
+
+.flair-slightlylessgiantflair {
+    padding: 0;
+    background: none;
+    color: black;
+    border: 0;
+    border-radius: 0;
+    background-image: url(%%slightlylessgiantflair%%);
+    display: inline-block;
+    height: 75px;
+    width: 75px;
 }
 
 .flair-tacogiantflair {
@@ -154,7 +174,7 @@ html:lang(nv) .side p a[href="http://nv.reddit.com/r/FlutterLounge/"]
 display: none !important;
 }
 
-/* Sidebar Filly */
+/* Best sidebar Filly */
 
 .side a[href="http://fav.me/d56f1ze"]{
    display: block;
