--- a/source-css/mylittlemotorhead.css
+++ b/source-css/mylittlemotorhead.css
@@ -715,6 +715,17 @@ a[href|="/rallytwi"] {
 a[href|="/rallytwi"] {
     background-position: -0px -140px
     }
+a[href|="/wfworking"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 209px;
+    background-image: url(%%wfworking%%)
+    }
+a[href|="/wfworking"] {
+    background-position: -0px -0px
+    }
 /**********************
 *
 *    OTHER EMOTE STUFF
