--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1076,7 +1076,7 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 */
 
 /* STOP SUBMITTING BORDERLANDS */
-#title-field.roundfield:before
+/*#title-field.roundfield:before
 {
  content:"PLEASE DO NOT SUBMIT THE BORDERLANDS MLP REFERENCE. IT HAS ALREADY BEEN SUBMITTED.";
  font-size:0.86em;
@@ -1087,7 +1087,7 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
  font-weight: bold;
  display:block;
  margin-bottom: 10px;
-}
+}*/
 
 
 /*NSFW.MOV*/
