--- a/source-css/tacoshy.css
+++ b/source-css/tacoshy.css
@@ -74,6 +74,16 @@ a[href|="/t18"] {
     background-image: url(%%t18%%) !important
     }
 
+a[href|="/businesstaco"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 600px;
+    height: 646px;
+    background-image: url(%%bussiness-tacoSS%%) !important
+    }
+
 a[href|="/pikachu"] {
     background-position: 0px 0px;
     display: block;
