--- a/source-css/thebestpony.css
+++ b/source-css/thebestpony.css
@@ -2402,6 +2402,17 @@ a[href|="/awesomecat"] {
 a[href|="/awesomecat"] {
     background-position: -398px -385px
     }
+a[href|="/areyounuts"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 86px;
+    background-image: url(%%secretemotes%%)
+    }
+a[href|="/areyounuts"] {
+    background-position: -468px -385px
+    }
 a[href|="/emyscoot"] {
     display: block;
     clear: none;
@@ -2466,5 +2477,16 @@ a[href|="/psydance"] {
     background-image: url(%%psydance%%)
     }
 a[href|="/psydance"] {
+    background-position: -0px -0px
+    }
+a[href|="/sbsurprise"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 156px;
+    height: 200px;
+    background-image: url(%%sbsurprise%%)
+    }
+a[href|="/sbsurprise"] {
     background-position: -0px -0px
     }
