--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -330,6 +330,7 @@ background-repeat: no-repeat;
 .flair-3p:after { background-position: 0px - 3150px }
 .flair-Fortehlulz33:after { background-position: 0px -3180px }
 .flair-IronChewbacca:after { background-position: 0px -3210px }
+.flair-whisperingsage:after { background-position: 0px -3240px }
 /* Nightmode fix for flair */
 body.res-nightmode:first-of-type .flair { background-color: transparent!important; }
 
@@ -824,7 +825,7 @@ a.author[href$=Greenie_Lye]:before { content:"Greenie_Lye (Green Derram)" }
 a.author[href$=Chinch335]:before,a.author[href$=IllusionOf_Integrity]:before { content:"Chillusion" }
 a.author[href$=trypsonite]:before { content:"Who"; color:blue }
 a.author[href$=RetardVomitPussyCunt]:before { content:"RainbowViolinPancakesCider" }
-a.author[href$=andysonic2]:before { content:"andysonic8" }
+a.author[href$=andysonic2]:before { content:"andysonic9" }
 a.author[href$="10z20Luka"]:before { content:"Titty-slickers, God of Thunder and Lord of the Dance" }
 a.author[href$=PinkiePie2012]:before { content:"Empress Pie" }
 a.author[href$=DarkSideOfTheSun]:before { content:"DickSideOfTheSun" }
