--- a/source-css/mylittlecirclejerk.css
+++ b/source-css/mylittlecirclejerk.css
@@ -542,6 +542,15 @@ a[href="/TI994A"]
     height: 364px;
     background-image: url(%%TI-994A%%)
     }
+a[href="/SWAPSPACE"] 
+{
+    display: block;
+    clear: none;
+    float: left;
+    width: 19000px;
+    height: 19000px;
+    background-image: url(%%SWAPSPACE%%)
+    }
 
 a[href="/thisisanemote"] 
 {
@@ -575,173 +584,6 @@ a[href="/dealwithit"]:after {
 
 /* Brony place your code of doom above here*/
 
-.flair-1 {
-    padding: 0;
-    background: none;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: 0px 0px
-    }
-.flair-2 {
-    padding: 0;
-    background: none;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: -16px 0px
-    }
-.flair-3 {
-    padding: 0;
-    background: none;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: 0px -16px
-    }
-.flair-4 {
-    padding: 0;
-    background: none;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: -16px -16px
-    }
-.flair-5 {
-    padding: 0;
-    background: none;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: 0px -32px
-    }
-.flair-6 {
-    padding: 0;
-    background: none;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: -16px -32px
-    }
-.flair-7 {
-    padding: 0;
-    background: none;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: 0px -48px
-    }
-.flair-8 {
-    padding: 0;
-    background: none;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: -16px -48px
-    }
-.flair-9 {
-    padding: 0;
-    background: none;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: 0px -64px
-    }
-.flair-10 {
-    padding: 0;
-    background: none;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: -16px -64px
-    }
-.flair-11 {
-    padding: 0;
-    background: none;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: 0px -80px
-    }
-.flair-12 {
-    padding: 0;
-    background: none;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: -16px -80px
-    }
-.flair-13 {
-    padding: 0;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: 0px -96px
-    }
-.flair-14 {
-    padding: 0;
-    background: none;
-    color: black;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(%%Bettercutiemarks%%);
-    background-position: -16px -96px
-    }
 .flair-15 {
     padding: 0;
     background: none;
