--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -1,6 +1,7 @@
 /* Before editing this CSS, please edit the comment below stating who
     is currently editing it and the time and date, to avoid collisions. */
 /*No one follows this^*/
+/*css pls*/
 /* UTC time: http://www.time.gov/timezone.cgi?UTC/s/0 */
 
 /***********************************
@@ -1341,16 +1342,6 @@ a[href|="/rbigmactears"]{
    background-position: -140px -630px !important
    }
 
-input[value="t1_c6hb8g9"] + .usertext-body a[href|="/twisquintlol"], input[value="t1_c6hljn1"] + .usertext-body a[href|="/twisquintlol"], input[value="t1_c6hthzy"] + .usertext-body a[href|="/twisquintlol"]
-{
-    display: block;
-    clear: none;
-    float: left;
-    width: 50px;
-    height: 50px;
-    background-image: url(%%normaltwisquint%%) !important
-}
-
 END-PONYSCRIPT-IGNORE {color: red}
 
 /*loungemotes_start*/
@@ -2076,11 +2067,11 @@ Random Plounge Buggery
     clear: both;
     text-align: center;
     width: 100%;
-    background-image: url(%%sbstarepeek-popart%%);
+    background-image: url(%%sbstarepeek-magritte%%);
     /*background-position: bottom center;*/
     background-repeat: no-repeat;
     margin-bottom: -0px;
-    background-position: 50% 80px;/*Path's OCD was here.*/
+    background-position: 50% 155px;/*Path's OCD was here.*/
     }
 html:lang(nv) .side p a[href="http://reddit.com/r/MLPLounge/"]
 {
