Highlight out-of-sub emotes in RES comment preview

--- a/data/bpmotes.css
+++ b/data/bpmotes.css
@@ -92,6 +92,17 @@
 }
 
 /*
+ * Added to RES preview emotes
+ */
+.bpm-outofsub {
+    /* Light red halo */
+    box-shadow: 0 0 4px 4px rgba(255, 96, 96, 0.60);
+    border-radius: 6px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+/*
  * Emote search CSS
  *
  * WARNING: due to my lack of CSS skills, there are many width/height values
