Stylesheet/emote/tag updates 2012-10-19

--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -176,7 +176,7 @@ display: none !important;
 
 /* Best sidebar Filly */
 
-.side a[href="http://fav.me/d56f1ze"]{
+.side a[href="http://fav.me/d531hmr"]{
    display: block;
    height: 120px;
    width: 120px;
