--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -2100,9 +2100,9 @@ h3 {
 
 .side a[href="http://www.reddit.com/r/MLPLounge/new/"]{
    display: block;
-   height: 80px;
-   width: 79px;
-   background: url(%%FillyColgate%%);
+   height: 84px;
+   width: 67px;
+   background: url(%%fillycloudchaser%%);
    position: fixed; 
    top: 260px;
    right: -10px;
