--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -573,7 +573,7 @@ a[href|="/ajsign"],a[href|="/lyrasign"],a[href|="/twisign"],a[href|="/dashsign"]
 a[href|="/ajsign"] em,a[href|="/lyrasign"] em,a[href|="/twisign"] em,a[href|="/dashsign"] em,a[href|="/derpysign"] em,a[href|="/scootasign"] em{
     position: absolute !important;
     top: 45px !important;
-    left: 90% !important;
+    left: 85% !important;
     margin-left: -125px !important;
     width: 100px !important;
     color: black !important;
@@ -825,7 +825,7 @@ a.author[href$=Greenie_Lye]:before { content:"Greenie_Lye (Green Derram)" }
 a.author[href$=Chinch335]:before,a.author[href$=IllusionOf_Integrity]:before { content:"Chillusion" }
 a.author[href$=trypsonite]:before { content:"Who"; color:blue }
 a.author[href$=RetardVomitPussyCunt]:before { content:"RainbowViolinPancakesCider" }
-a.author[href$=andysonic2]:before { content:"andysonic9" }
+a.author[href$=andysonic2]:before { content:"MASSIVE FAGGOT" }
 a.author[href$="10z20Luka"]:before { content:"Titty-slickers, God of Thunder and Lord of the Dance" }
 a.author[href$=PinkiePie2012]:before { content:"Empress Pie" }
 a.author[href$=DarkSideOfTheSun]:before { content:"DickSideOfTheSun" }
