--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1076,9 +1076,9 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 */
 
 /* STOP SUBMITTING BORDERLANDS */
-/*#title-field.roundfield:before
+#title-field.roundfield:before
 {
- content:"PLEASE DO NOT SUBMIT THE BORDERLANDS MLP REFERENCE. IT HAS ALREADY BEEN SUBMITTED.";
+ content:"The Season 3 date announcement has already been posted. As such, all further announcements, countdowns, etc. are being removed. Please do not submit them.";
  font-size:0.86em;
  padding:5px;
  border:1px solid #5f99cf;
@@ -1087,7 +1087,7 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
  font-weight: bold;
  display:block;
  margin-bottom: 10px;
-}*/
+}
 
 
 /*NSFW.MOV*/
