--- a/source-css/tacoshy.css
+++ b/source-css/tacoshy.css
@@ -380,6 +380,15 @@ a[href|="/tacobop"] {
     height: 399px;
     background-image: url(%%tacobop%%) !important
     }
+a[href|="/tacosmug"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 458px;
+    height: 414px;
+    background-image: url(%%tacosmug%%) !important
+    }
 /* ----------- Name Change ---------------- */
 
 
