--- a/source-css/pinkiepie.css
+++ b/source-css/pinkiepie.css
@@ -340,3 +340,4 @@ a[href|='/ppsing'] {width:102px; height:160px; background-position: -2px -356px}
 a[href|='/ppsteamingmad'] {width:351px; height:200px; background-position: -106px -356px}
 a[href|='/ppstrut'] {width:149px; height:150px; background-position: -2px -558px}
 a[href|='/ppwhy'] {width:103px; height:125px; background-position: -153px -558px}
+a[href|='/strut'] { width:71px; height:150px; background-image: url(%%strut%%); background-position: 0px 0px; display: block; clear: none; float: left; margin-left: 3px; margin-right: 3px; }
